--- a/src/main/java/com/mycompany/intento0304/Menu/Pedido/PedidoEliminar.form
+++ b/src/main/java/com/mycompany/intento0304/Menu/Pedido/PedidoEliminar.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.JComboBox" name="cbPedidos">
       <Properties>
@@ -21,7 +21,6 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -63,7 +62,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                          <Component id="cbProductos" min="-2" pref="160" max="-2" attributes="0"/>
+                          <Component id="cbPedidos1" min="-2" pref="160" max="-2" attributes="0"/>
                           <EmptySpace pref="38" max="32767" attributes="0"/>
                           <Component id="btBorrar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
@@ -87,7 +86,7 @@
                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="cbProductos" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cbPedidos1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btBorrar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="58" max="32767" attributes="0"/>
@@ -122,14 +121,14 @@
             <Property name="text" type="java.lang.String" value="Eliminar Pedidos"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="cbProductos">
+        <Component class="javax.swing.JComboBox" name="cbPedidos1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="0"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbProductosActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbPedidos1ActionPerformed"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
